Implement tests for CanteenController